<resources>
    <string name="app_name">微助手</string>
    <string name="dy_ks">抖音 快手</string>
    <string name="dy_attention_task">抖音关注任务</string>
    <string name="top_bar_title">标题</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dianzan">点赞任务</string>
    <string name="username_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="input_code">请输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="register">注册</string>
    <string name="network_failure">网络异常，获取数据失败</string>


    <string name="please_waite_to_refresh">正在加载，请稍后&#8230;</string>
    <string name="refresh_failed">加载失败，请点击重试</string>
    <string name="data_loaded">数据已全部加载</string>
    <string name="no_data">暂时没有数据</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="text_focus_douyin">你的游戏号(非任务内关注号)</string>
    <string name="task_commit">任务提交</string>
    <string name="my_capture">"我"的截图</string>
    <string name="click_select_image">点击选择图片</string>
    <string name="focus_image">关注截图</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="txt_user_name">三军不可夺帅</string>
    <string name="string_my_earning">我的财产</string>
    <string name="string_scan_code">二维码</string>
    <string name="string_cash_money">提现</string>
    <string name="string_voice_cash_money">张**:在本平台提现200.00元</string>
    <string name="earning">赚钱</string>
    <string name="mine">我的</string>
    <string name="string_to_cash">我要提现:</string>
    <string name="string_cash_type">提现方式</string>
    <string name="string_cash_mount">提现数量</string>
    <string name="string_cash_account">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="string_cash_account_tips">请正确填写微信或支付宝账号</string>
    <string name="string_gold">元宝</string>
    <string name="string_input_mount_tips">请填写数量</string>
    <string name="string_input_account_tips">请填写账号</string>
    <string name="qr_code_scan">扫一扫二维码图案，可下载应用</string>
    <string name="qr_code_help">
        <p style='white-space: normal; text-indent: 14px;'>
            <span style='font-family: 宋体; font-size: 14px;'>
                分享给好友，成功注册为白银会员，立即送3000元宝（大约30元）！<br/>
                1、成功推荐4人，可得3000x4＝12000元宝（约120元），同时免费为您升级为黄金会员，可享受做任务一单100元宝（约1元）。多做多得。<br/>
                2、成功推荐8人，可得3000x8=24000元宝（约240元），同时免费为您升级为白金会员，可享受做任务一单150元宝（约1.5元）。多做多得。<br/>
                3、成功推荐12人，可得3000x12=36000元宝（约360元），同时免费为您升级为钻石会员，可享受做任务一单200元宝（约2元）。多做多得<br/>
        </span></p>
        </string>
    <string name="alipay_wechat">微信/支付宝</string>

</resources>
