<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_tran10"
    android:orientation="vertical"
    tools:context="com.microsoft.ui.activity.CashActivity">

    <include layout="@layout/layout_title_bar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_10_dp"
        android:textSize="@dimen/size_18_dp"
        android:textStyle="bold"
        android:text="@string/string_to_cash"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48_dp"
        android:layout_marginLeft="@dimen/size_10_dp"
        android:layout_marginRight="@dimen/size_10_dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/size_10_dp"
            android:textStyle="bold"
            android:text="@string/string_cash_type"/>

        <Spinner
            android:id="@+id/sp_cash_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/size_60_dp"
            android:text="@string/alipay_wechat"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48_dp"
        android:layout_marginTop="@dimen/size_20_dp"
        android:layout_marginLeft="@dimen/size_10_dp"
        android:layout_marginRight="@dimen/size_10_dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/size_10_dp"
            android:textStyle="bold"
            android:layout_weight="0.2"
            android:text="@string/string_cash_account"/>

        <EditText
            android:id="@+id/et_cash_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:textSize="@dimen/dimens_sp_14"
            android:hint="@string/string_input_account_tips"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48_dp"
        android:layout_marginTop="@dimen/size_20_dp"
        android:layout_marginLeft="@dimen/size_10_dp"
        android:layout_marginRight="@dimen/size_10_dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10_dp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_weight="0.2"
            android:text="@string/string_cash_mount"/>

        <EditText
            android:id="@+id/et_cash_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:layout_marginLeft="@dimen/size_8_dp"
            android:hint="@string/string_input_mount_tips"
            android:textSize="@dimen/dimens_sp_14"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/size_10_dp"
            android:textStyle="bold"
            android:text="@string/string_gold"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_pull_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_30_dp"
        android:layout_marginTop="@dimen/size_60_dp"
        android:layout_marginRight="@dimen/size_30_dp"
        android:background="@drawable/shape_bg_button_yellow"
        android:text="提现"/>

</LinearLayout>
