<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.microsoft.ui.activity.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username_et"
                style="@style/register_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="请输入手机号"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:text=""/>

            <ImageView
                android:id="@+id/delete_usn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/username_et"
                android:layout_alignRight="@id/username_et"
                android:layout_marginTop="13dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/dl_delate"
                android:visibility="invisible"/>
        </RelativeLayout>

        <View
            style="@style/register_line"
            android:layout_width="match_parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_et"
                style="@style/register_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:hint="请输入6-16位密码"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text=""/>

            <ImageView
                android:id="@+id/delete_psd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/password_et"
                android:layout_alignRight="@id/password_et"
                android:layout_marginTop="13dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/dl_delate"
                android:visibility="invisible"/>
        </RelativeLayout>


        <View
            style="@style/register_line"
            android:layout_width="match_parent"
            android:layout_below="@+id/username_et"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/code_et"
                style="@style/register_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/yanzhengma"
                android:gravity="center_vertical"
                android:hint="@string/input_code"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true"/>

            <View
                style="@style/register_line"
                android:layout_width="match_parent"
                android:layout_below="@+id/code_et"/>

            <Button
                android:id="@+id/btn_auth_code"
                style="@style/normal_red_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:text="@string/send_code"
                android:textColor="@color/white"
                android:textStyle="normal"/>
        </RelativeLayout>


        <Button
            android:id="@+id/register"
            style="@style/normal_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/register"/>
    </LinearLayout>
</RelativeLayout>